# dining-philosophers-in-cpp

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
